[tool.poetry]
name = "hw 10"
version = "0.1.0"
description = ""
authors = ["Vlad Mazur <vladopermoz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
fastapi-users = "^14.0.0"
python-jose = "^3.3.0"
bcrypt = "^4.2.1"
redis = {extras = ["asyncio"], version = "^5.2.0"}


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
